# bunkerverse-platform

./: .ci-trigger  .clang-format  .clippy.toml  .env.example  .gitignore  .gitmodules  COMPATIBILITY_MATRIX.md  Cargo-docker.toml  Cargo.toml  DEPENDENCIES.md  DOCKER_ENVIRONMENT_TEST_REPORT.md  IPFS_MOCK_IMPLEMENTATION.md  PERFORMANCE_REPORT.md  PHASE0TASK02_COMPLETION_VALIDATION_REPORT.md  README.md  SETUP_VALIDATION.md  apply_dockerfile_fixes.sh  buf.gen.docs.yaml  buf.gen.yaml  buf.work.yaml  buf.yaml  deny.toml  docker-compose.yml  fix_dockerfiles.py  setup-hooks.sh  test_services.py
.claude/: github-commit-guidance.md  settings.local.json
.githooks/: pre-commit
.github/workflows/: client-release.yml  container-publish.yml  netchain-backend-ci.yml  netchain-client-ci.yml  netchain-gameserver-stubs-ci.yml  proto-validation.yml  protobuf-validation.yml  trigger.txt
artifacts/: README.md
artifacts/performance/: .gitkeep
client/: CMakeLists-console.cmake  README.md
client/cpp-shell/: CMakeLists.txt
client/cpp-shell/src/: application.cpp  application.h  main.cpp
client/qml-ui/: Main.qml  qmlproject
client/rust-app-logic/: Cargo.toml
contracts/: Cargo.toml  hardhat.config.js  package.json
contracts/scripts/: deploy.js
contracts/solidity/: BunkerverseNFT.sol
development-phases/Phase0/: Phase0Task00.md
development-plan/: project-info.md
development-plan/Phase0/: Phase0Task01.md  Phase0Task02.md  Phase0Task03.md  Phase0Task04.md  Phase0Task05.md  Phase0Task06.md  Phase0Task07.md  Phase0Task08.md  Phase0Task09.md  Phase0Task10.md  Phase0Task11.md  Phase0Task12.md  Phase0Task13.md  Phase0Task14.md
development-plan/Phase1/: Phase1Task00.md  Phase1Task01.md  Phase1Task02.md  Phase1Task03.md  Phase1Task04.md  Phase1Task05.md  Phase1Task06.md  Phase1Task07.md  Phase1Task08.md  Phase1Task09.md  Phase1Task10.md  Phase1Task11.md  Phase1Task12.md  Phase1Task13.md
development-plan/Phase2/: Phase2Task00.md  Phase2Task01.md  Phase2Task02.md  Phase2Task03.md  Phase2Task04.md  Phase2Task05.md  Phase2Task06.md  Phase2Task07.md  Phase2Task08.md  Phase2Task09.md
development-plan/Phase3/: Phase3Task00.md  Phase3Task01.md  Phase3Task02.md  Phase3Task03.md  Phase3Task04.md  Phase3Task05.md  Phase3Task06.md  Phase3Task07.md  Phase3Task08.md  Phase3Task09.md  Phase3Task10.md
development-plan/Phase4/: Phase4Task00.md  Phase4Task01.md  Phase4Task02.md  Phase4Task03.md  Phase4Task04.md  Phase4Task05.md  Phase4Task06.md  Phase4Task07.md  Phase4Task08.md  Phase4Task09.md  Phase4Task10.md
development-plan/Phase5/: Phase5Task00.md  Phase5Task01.md  Phase5Task02.md  Phase5Task03.md  Phase5Task04.md  Phase5Task05.md
development-plan/Phase6/: Phase6Task00.md  Phase6Task01.md  Phase6Task02.md  Phase6Task03.md  Phase6Task04.md  Phase6Task05.md
development-plan/Phase7/: Phase7Task00.md  Phase7Task01.md  Phase7Task02.md  Phase7Task03.md  Phase7Task04.md  Phase7Task05.md  Phase7Task06.md  Phase7Task07.md
docs/: API_CONTRACTS_V0_1_SUMMARY.md  DEVELOPMENT_ENVIRONMENT.md  INCIDENT_RESPONSE_PLAN_DRAFT.md  MONOREPO_STRATEGY.md  PROJECT_GOVERNANCE_AND_WORKFLOWS.md  SECURITY_TRAINING_COMPLETED.md  SMART_CONTRACT_EVOLUTION_PLAN.md  SMART_STUBS_SPECIFICATION.md  TASK_03_COMPLETION_VALIDATION.md  TESTING_STRATEGY.md  protobuf-setup.md
docs/adr/: 0001-l3-architecture-overview.md  0002-indexer-choice.md  0003-client-tech-stack.md  0004-nar-integration.md  0005-zklogin-flow.md  0006-marketplace-service-design.md  0008-l3-framework-selection.md  0009-final-technology-stack-validation.md
docs/ci-cd/: BRANCH_PROTECTION_RULES.md  CI_PIPELINE_VALIDATION_REPORT.md  CODE_SIGNING_SETUP.md  GITHUB_BRANCH_PROTECTION_SETUP.md  TASK_0.4_COMPLETION_CHECKLIST.md
docs/progress_logs/: progress_phase_0.md
docs/security/: CI_SECURITY_SCAN_TRIAGE_PROCESS.md  SCHEMA_API_SECURITY_ASSESSMENT.md
games/: README.md
games/ue5-plugin/: CMakeLists.txt
indexer/: Cargo.toml
infra/: README.md
libs/common-rust/: Cargo.toml
libs/common-rust/src/: errors.rs  lib.rs  time.rs  types.rs  validation.rs
libs/nar-rust-wrapper-for-llama-cpp/: Cargo.toml  build.rs  cbindgen.toml
libs/nar-rust-wrapper-for-llama-cpp/fuzz/: Cargo.toml
libs/nar-rust-wrapper-for-llama-cpp/src/: lib.rs
libs/rt-shared-cpp/: CMakeLists.txt
libs/rt-shared-cpp/src/: dummy.cpp
libs/smart-stubs/: Cargo.toml
libs/smart-stubs/src/: lib.rs
poc/cxx-qt-client/: CXX_QT_POC_VALIDATION_REPORT.md  Cargo.toml  build.rs  qml.qrc
poc/cxx-qt-client/qml/: main.qml
poc/cxx-qt-client/src/: main.rs
poc/elasticsearch-indexer/: Cargo.toml  SECURITY_ASSESSMENT.md
poc/elasticsearch-indexer/src/: main.rs
poc/ipfs-nft/: Cargo.toml
poc/ipfs-nft-metadata/: Cargo.toml
poc/ipfs-nft-metadata/src/: main.rs
poc/ipfs-nft/src/: main.rs
poc/llama-cpp-nar/: Cargo.toml  SECURITY_ASSESSMENT.md
poc/llama-cpp-nar/src/: main.rs  mock_nar.rs
poc/redb-storage/: Cargo.toml  SECURITY_ASSESSMENT.md
poc/redb-storage/benches/: redb_performance.rs
poc/redb-storage/src/: encryption.rs  main.rs
poc/redis-marketplace/: Cargo.toml  REDIS_MARKETPLACE_POC_VALIDATION_REPORT.md  docker-compose.yml
poc/redis-marketplace/src/: main.rs  tests.rs
poc/zklogin-auth/: Cargo.toml  SECURITY_ASSESSMENT.md
poc/zklogin-auth/src/: crypto.rs  main.rs  oauth.rs  zkproof.rs
scripts/: benchmark.py  create-service-dockerfiles.sh  deploy-docs.sh  generate-docs.ps1  generate-docs.sh  lint-proto.ps1  lint-proto.sh  nginx.conf  setup-branch-protection.sh  validate-ci-pipeline.sh  validate_poc.sh
services/: README.md
services/ai_data/: Cargo.toml  Dockerfile  build.rs
services/ai_data/src/: config.rs  grpc_server.rs  main.rs  stub.rs
services/identity/: Cargo.toml  Dockerfile  build.rs
services/identity/src/: config.rs  grpc_server.rs  main.rs  stub.rs
services/ipfs-mock/: Cargo.toml  README.md  test_endpoints.sh
services/ipfs-mock/src/: cid.rs  content.rs  main.rs
services/marketplace/: Cargo.toml  Dockerfile  build.rs
services/marketplace/src/: config.rs  grpc_server.rs  main.rs  stub.rs
services/player_account/: Cargo.toml  Dockerfile
(+102 files in other folders)
