[workspace]
members = [
    "contracts",
    "services/identity",
    "services/account", 
    "services/marketplace",
    "services/payment",
    "services/mission",
    "services/social",
    "services/ai_data",
    "services/feedback",
    "indexer",
    "libs/common-rust",
    "libs/nar-rust-wrapper-for-llama-cpp",
    "client/rust-app-logic",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# CXX-Qt for Rust-QML integration (pinned version)
cxx-qt = "0.7.2"
cxx-qt-build = "0.7.2"
cxx-qt-lib = "0.7.2"