[package]
name = "smart-stubs"
version = "0.1.0"
edition = "2021"
description = "Shared library for implementing configurable smart stubs in BUNKERVERSE services"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tonic = "0.10"
prost = "0.12"