[package]
name = "cxx-qt-client-poc"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# CXX-Qt dependencies
cxx-qt = "0.7"
cxx-qt-build = "0.7"
cxx-qt-lib = "0.7"
cxx = "1.0"

# Qt bindings via CXX-Qt (Qt 6 compatible)

# HTTP client for API communication
reqwest = { version = "0.11", features = ["json"] }

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cxx-qt-build = "0.7"