[package]
name = "elasticsearch-indexer-poc"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# elasticsearch = "8.5"  # Using reqwest instead for PoC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.0"
reqwest = { version = "0.11", features = ["json"] }

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"