[package]
name = "ipfs-nft-metadata-poc"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# IPFS client
ipfs-api-backend-hyper = { version = "0.6", features = ["with-hyper-tls"] }
ipfs-api-prelude = "0.6"

# Web framework for testing
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities  
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for external requests
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Async futures utilities
futures-util = "0.3"

# File handling
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
walkdir = "2.0"

# Hashing for content verification
sha2 = "0.10"
hex = "0.4"

# Image processing for NFT validation
image = { version = "0.25", features = ["jpeg", "png", "webp"] }

# JSON schema validation for metadata
jsonschema = "0.18"

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"