[package]
name = "bunkerverse-ipfs-nft-poc"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# IPFS client
ipfs-api-backend-hyper = "0.6"
ipfs-api-prelude = "0.6"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto and hashing
sha2 = "0.10"
blake3 = "1.0"
multihash = "0.19"
cid = "0.11"

# Image processing
image = "0.25"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File handling
tempfile = "3.0"
mime_guess = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
tokio-test = "0.4"