[package]
name = "llama-cpp-nar-poc"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# nar-rust-wrapper = { path = "../../libs/nar-rust-wrapper-for-llama-cpp" } # Commented out for PoC - using mock implementation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"