[package]
name = "redb-storage-poc"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
redb = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "redb_performance"
harness = false