[package]
name = "redis-marketplace-poc"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Redis integration
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket support
futures-util = "0.3"
tokio-stream = "0.1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Crypto for secure IDs
rand = "0.8"
sha2 = "0.10"

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"