[package]
name = "zklogin-auth-poc"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptographic dependencies
jsonwebtoken = "9.1"
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

# HTTP client for OAuth validation
reqwest = { version = "0.11", features = ["json"] }