[package]
name = "ai-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
nar-rust-wrapper = { path = "../../libs/nar-rust-wrapper-for-llama-cpp" }
