[package]
name = "identity-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "9.1"
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
