[package]
name = "ipfs-mock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ipfs-mock"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = { workspace = true }
bs58 = "0.4"
sha2 = "0.10"
mime_guess = "2.0"