[package]
name = "marketplace-service"
version = "0.1.0"
edition = "2021"
description = "NFT marketplace service for BUNKERVERSE Platform - handles NFT trading, auctions, and marketplace operations"
license = "MIT"
repository = "https://github.com/emiliancristea/bunkerverse-platform"
readme = "README.md"
keywords = ["bunkerverse", "marketplace", "nft", "trading", "gaming"]
categories = ["games", "cryptocurrency", "web-programming"]

[[bin]]
name = "marketplace-service"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.10"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# gRPC dependencies
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
futures-util = "0.3"
